<resources>
    <string name="app_name">TimeManagementApplication</string>
    <string name="day_flow">Day Flow</string>
    <string name="history_and_statistics">History And Statistics</string>
    <string name="global_planning">Global Planning</string>
    <string name="welcome">Welcome!</string>
    <string name="click_here">Click here for a tutorial</string>
    <string name="advertisement">Advertisement</string>
    <string name="taken_rewards">Taken Rewards</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="awarded_points">Awarded Points</string>
    <string name="spent_points">Spent Points</string>
    <string name="create_a_reward">Create a Reward</string>
    <string name="create_a_task">Create a Task</string>
    <string name="reward_name">Reward name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
</resources>