<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".MainActivity"
    android:weightSum="100"
    android:backgroundTint="@color/dark_blue"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_weight="5"
        android:gravity="center">

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="79"
         android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linear_layout_border">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/first">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/doneTasks1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/done_tasks"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:background="@drawable/linear_layout_border"
                            />

                        <TextView
                            android:id="@+id/gainedPoints"
                            android:layout_width="136dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/awarded_points"
                            android:textAlignment="center"
                            android:textColor="@color/white"

                            android:background="@drawable/linear_layout_border"
                            />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:fillViewport="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/linear_layout_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/second">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                        <TextView
                            android:id="@+id/takenRewards1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/taken_rewards"
                            android:textAlignment="center"
                            android:textColor="@color/white"


                            android:background="@drawable/linear_layout_border"/>

                        <TextView
                            android:id="@+id/spentPoints"
                            android:layout_width="136dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/spent_points"
                            android:textAlignment="center"
                            android:textColor="@color/white"

                            android:background="@drawable/linear_layout_border"
                            />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:layout_weight="3"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/currentPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Your remaining points:">
        </TextView>
        <TextView
            android:id="@+id/pointsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:orientation="horizontal"
        android:layout_weight="13"
        android:weightSum="150">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/createTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_task"
                android:backgroundTint="@color/light_blue">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/light_blue">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center|bottom">
            <Button
                android:id="@+id/createRewardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_reward"
                android:backgroundTint="@color/light_blue">
            </Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>