<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="11">



        <LinearLayout
            android:id="@+id/RelativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="italic | bold"
                android:textColor="@android:color/white"

                >
            </TextView>




            <Button
                android:id="@+id/dayFlowButton"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_blue"
                android:text="@string/day_flow"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />


            <Button
                android:id="@+id/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/log_out"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="italic | bold"
                android:backgroundTint="@color/pale_blue"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center">

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>
